# splink

./: .dockerignore  .flake8  .gitignore  .lycheeignore  .pyspelling.yml  21_em_in_spark.ipynb  22_em_in_spark_fake.ipynb  23_compute_real_params_from_fake_data.ipynb  404.html  996.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile_testrunner  LICENSE  Makefile  README.md  SplinkDataFrame.html  add_chunking_plan.md  blocking_rule_composition.html  blocking_rule_library.html  comparison.html  comparison_helpers.html  comparison_level.html  comparison_level_composition.html  comparison_level_library.html  comparison_library.html  comparison_template_library.html  configuration_and_settings.ipynb  datasets.html  delete_settings_json.json  docker-compose.yml  documentation_index.html  documentation_index.md  duckdb_salting_tests.py  em_training_session.html  estimate_u_pr.md  feed_json_created.json  feed_json_updated.json  (+60 more)
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  continuous-integration-workflow.yml  dependabot.yml
api_docs/: api_docs_index.html  blocking.html  blocking_analysis.html  clustering.html  column_expression.html  comparison_level_library.html  comparison_library.html  datasets.html  em_training_session.html  evaluation.html  exploratory.html  inference.html  linker_clustering.html  misc.html  settings_dict_guide.html  splink_dataframe.html  table_management.html  training.html  visualisations.html
benchmarking/: benchmark_connected_components.py  benchmarking_functions.py  combine_benchmarks_timeseries.py  connected_components_random_graphs.py  fake_20000_from_splink_demos.csv  requirements.txt  run_benchmarks_locally.sh  run_synthetic_data_benchmarks_locally.sh  test_perf_quick.py  test_performance.py  test_synthetic_data.py  time_series.json
binder/: requirements.txt
blog/: index.html
charts/: accuracy_analysis_from_labels_table.html  accuracy_chart_from_labels_table.html  cluster_studio_dashboard.html  comparison_viewer_dashboard.html  completeness_chart.html  cumulative_comparisons_to_be_scored_from_blocking_rules_chart.html  cumulative_num_comparisons_from_blocking_rules_chart.html  index.html  m_u_parameters_chart.html  match_weights_chart.html  missingness_chart.html  parameter_estimate_comparisons_chart.html  precision_recall_chart_from_labels_table.html  profile_columns.html  roc_chart_from_labels_table.html  template.html  tf_adjustment_chart.html  threshold_selection_tool_from_labels_table.html  unlinkables_chart.html  waterfall_chart.html
css/: custom.css
dashboards/: .gitkeep
data/: data.csv  data_null.csv  data_null_fname.csv  fake_100.parquet  fake_1000.parquet  fake_10000.parquet  fake_100000.parquet
databricks-notebooks/: splink notebook - databricks-splink.py
demo_notebooks/: configuration_and_settings.ipynb  demo_utils.py  quickstart_demo.ipynb
demos/: conftest.py
dev_guides/: CONTRIBUTING.html  caching.html  debug_modes.html  dependency_compatibility_policy.html  index.html  spark_pipelining_and_caching.html  transpilation.html  udfs.html
docs/: SplinkDataFrame.md  autodoc.md  blocking_rule_composition.md  blocking_rule_library.md  blocking_rules.md  comparison.md  comparison_composition.md  comparison_helpers.md  comparison_level.md  comparison_level_composition.md  comparison_level_library.md  comparison_library.md  comparison_template_library.md  comparison_vector_values.md  datasets.md  documentation_index.md  em_training_session.md  examples_index.md  getting_started.md  index.md  installations.md  linker.md  linkerbloc.md  linkerest.md  linkereval.md  linkerexp.md  linkermodelviz.md  linkerpred.md  linkerqa.md  linkervis.md  settings_dict_guide.md  spelling_test_file.md  userguide.md
hooks/: __init__.py
includes/: tags.html
overrides/: main.html
scripts/: altair_chart_definitions.py  build-test.dockerfile  create_llm_prompt.py  create_llm_prompt_long.py  create_llm_prompt_short.py  create_venv.sh  custom_dictionary.txt  docs-requirements.txt  duckdb-less_packages.sh  duckdbless_requirements.txt  find_replace_txt.sh  generate_dataset_docs.py  generate_dialect_comparison_docs.py  json_schema_to_md_doc.py  lint.sh  lint_and_format.sh  llm_context_long.txt  llm_prompt_short.txt  make_docs_local.sh  make_docs_locally.sh  make_test_datasets_smaller.py  modify_notebooks.py  preprocess_markdown_includes.py  pseudo_symlink_cls.sh  reduce_notebook_runtime.py  repro_duckdb_minimal.py  run_all_notebooks.sh  run_notebooks.sh  run_tests.Dockerfile  spellchecker.sh  symlink_cls.sh  test_build.sh  test_poetry_build.sh  update_vega.py
search/: search_index.json
settingseditor/: editor.html
sparklink/: __init__.py  blocking.py  case_statements.py  chart_definitions.py  check_types.py  comparison_evaluation.py  expectation_step.py  formatlog.py  gammas.py  intuition.py  iterate.py  logging_utils.py  maximisation_step.py  params.py  settings.py  sql.py  term_frequencies.py  validate.py
splink/: README.md  __init__.py  accuracy.py  analyse_blocking.py  analyse_blocking_rule.py  autoblocking.py  block_from_labels.py  blocking.py  blocking_analysis.py  blocking_rule_composition.py  blocking_rule_creator.py  blocking_rule_creator_utils.py  blocking_rule_library.py  blocking_rules.py  blocking_rules_library.py  break_lineage.py  cache_dict_with_logging.py  case_statements.py  chart_definitions.py  charts.py  check_types.py  cluster.py  cluster_metrics.py  cluster_studio.py  clustering.py  column_expression.py  combine_estimates.py  combine_models.py  comparison.py  comparison_creator.py  comparison_evaluation.py  comparison_helpers.py  comparison_helpers_utils.py  comparison_level.py  comparison_level_composition.py  comparison_level_creator.py  comparison_level_library.py  comparison_level_sql.py  comparison_levels_library.py  comparison_library.py  (+91 more)
tests/: basic_settings.py  cc_testing_utils.py  conftest.py  decorator.py  expectation_maximisation_test_answers.xlsx  helpers.py  linker_utils.py  literal_utils.py  test_2_to_3.py  test_accuracy.py  (+129 more)
(+830 files in other folders)
