[tool.poetry]
name = "splink"
version = "4.0.0.dev3"
description = "Fast probabilistic data linkage at scale"
authors = ["Robin Linacre <robinlinacre@hotmail.com>", "Sam Lindsay", "Theodore Manassis", "Tom Hepworth", "Andy Bond", "Ross Kennedy"]
license = "MIT"
homepage = "https://github.com/moj-analytical-services/splink"
repository = "https://github.com/moj-analytical-services/splink"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0.0"
jsonschema = ">=3.2"
# 1.3.5 is the last version supporting py 3.7.1
pandas = ">1.3.5"
duckdb = ">=0.9.2"
sqlglot = ">=13.0.0"
altair = "^5.0.1"
Jinja2 = ">=3.0.3"
phonetics = ">=1.0.5"

# Optional installs
pyspark = {version=">=3.2.1", optional=true}

awswrangler = [
    {version=">=3.0.0,<4.0.0", python = ">=3.8", optional=true}
]

psycopg2-binary = {version=">=2.8.0", optional=true}

# for graph metrics
igraph = { version = ">=0.11.2", python = ">=3.8", optional=true }

[tool.poetry.group.dev]
[tool.poetry.group.dev.dependencies]
tabulate = ">=0.8.9"
pyspark = ">=3.2.1"
sqlalchemy = ">=1.4.0"
# temporarily use binary version, to avoid issues with pg_config path
psycopg2-binary = ">=2.8.0"
igraph = ">=0.11.2"

[tool.poetry.group.linting]
[tool.poetry.group.linting.dependencies]
black = "22.6.0"
ruff = "0.0.257"

[tool.poetry.group.testing]
[tool.poetry.group.testing.dependencies]
# pin to reduce dependencies
pytest = ">=7.3"
pyarrow = ">=7.0.0"
networkx = ">=2.5.1"
rapidfuzz = ">=2.0.3"

[tool.poetry.group.typechecking]
optional = true
[tool.poetry.group.typechecking.dependencies]
mypy = "1.9.0"

[tool.poetry.extras]
pyspark = ["pyspark"]
spark = ["pyspark"]
athena = ["awswrangler"]
postgres = ["sqlalchemy", "psycopg2-binary"]

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # bugbear
    "B",
    # flake8-print
    "T20"
]
ignore = [
    "B905", # `zip()` without an explicit `strict=` parameter
    "B006", # Do not use mutable data structures for argument defaults"
]

[tool.pytest.ini_options]
addopts = ["-m default"]
markers = [
# only tests where backend is irrelevant:
    "core",
# see tests/decorator.py::dialect_groups for group details:
    "default",
    "all",
# backend-specific sets
    "duckdb",
    "duckdb_only",
    "spark",
    "spark_only",
    "sqlite",
    "sqlite_only",
]

[tool.mypy]
packages = "splink"
# temporary exclusions
exclude = [
    # modules with large number of errors
    '.*comparison.*library\.py',
    '.*linker\.py',
    '/settings_validation/'
]
# for now at least allow implicit optionals
# to cut down on noise. Easy to fix.
implicit_optional = true
# for now, ignore missing imports
# can remove later and install stubs, where existent
ignore_missing_imports = true
# don't follow imports to modules we don't want to typecheck yet
# eventually restore this back to the default "normal"
follow_imports = "silent"
